# backend

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dotenv.pyi  dump.rdb  entrypoint.sh  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: bot-server.yml  local-branches.yml  modular-back.yml  modular-bc.yml  modular-bs.yml  personal-branches.yml  rwf-build.yml  rwf-deploy.yml  rwf-lint-precommit.yml  rwf-notify.yml  rwf-precommit.yml  rwf-pytest.yml  rwf-test-app.yml  rwf-test-bc.yml  rwf-test-pytest.yml  script.sh  wf-modular-bc.yml  wf-modular-bs.yml  wf-modular-devconstructor.yml  wf-modular-testingapp.yml  wf-test-branches.yml
bot_constructor/: .dockerignore  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  log.py  manage.py  pyproject.toml  schema.yml  setup.cfg
bot_constructor/.github/workflows/: modular-back.yml
bot_constructor/api/: apps.py  constants.py  exceptions.py  filters.py  serializers.py  urls.py  views.py
bot_constructor/api/drf_spectacular/: drf_serializers.py  drf_views.py
bot_constructor/apps/bot_management/: admin.py  apps.py  constants.py  models.py  regexps.py
bot_constructor/apps/bot_management/management/commands/: populate_db.py
bot_constructor/apps/bot_management/migrations/: 0001_initial.py  0002_alter_header_options_alter_variable_options.py  0002_alter_telegrambotaction_action_type.py  0002_rename_api_availablility_telegrambot_api_availability.py  0002_telegrambot_unique_name.py  0003_alter_telegrambotaction_message.py  0003_telegrambot_description_telegrambotaction_api_key_and_more.py  0004_alter_telegrambot_api_key_alter_telegrambot_api_url.py  0004_alter_variable_telegram_action.py  0004_remove_telegrambot_is_started_and_more.py  0005_alter_telegrambot_api_key_alter_telegrambot_api_url.py  0005_alter_telegrambotaction_position_and_more.py  0006_alter_telegrambot_api_url_alter_telegrambot_name_and_more.py  0006_alter_telegrambotaction_position.py  0007_alter_telegrambotaction_next_action.py  0008_alter_telegrambot_telegram_token.py  0009_alter_telegrambot_name_alter_telegrambotaction_name.py  0010_telegrambotaction_action_type_and_more.py  0011_alter_telegrambot_created_at_alter_telegrambot_name.py  0012_alter_telegrambotaction_action_type.py
bot_constructor/apps/bot_server/: apps.py
bot_constructor/apps/testing_app/: apps.py
bot_constructor/bot_constructor/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
bot_constructor/bot_constructor/allauth/: adapters.py
bot_constructor/factory_data/: factories.py
bot_constructor/migrations/: 0001_initial.py
bot_constructor/tests/api/: test_serializers.py  test_views.py
bot_constructor/tests/apps/bot_management/: test_models.py
bot_server/: Dockerfile  README.md  api.py  bots.py  celerybeat-schedule.db  db.py  docker-compose.yml  dump.rdb  entrypoint.sh  handlers.py  log.py  main.py  manage.py  models.py  models_api.py  pika.py  pyproject.toml  test_data.py
bot_server/bot_server/: __init__.py  asgi.py  bot.py  celery.py  settings.py  test_bot.py  urls.py  wsgi.py
gateway/: nginx.conf
infra/: .env_example  portainer.txt
infra/bot_constructor/: .env_example
infra/requests/: test_cart_ecome.http  test_users.http
infra/services/: daemon.json  infra-dev.yml  init-dbases.sql  init-multi-db.sh  init-multi-db.sql
infra/traefik/: compose.yml
infra/traefik/config/: traefik.yml
infra/traefik/services/: fief-compose.yml  modular-back.yml  nginx-compose.yml  pgadmin-compose.yml
testing_app/: Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  testing_app_swagger.yml  testing_app_swagger_2.yml
testing_app/api/: urls.py
testing_app/api/v1/: permissions.py  serializers.py  urls.py  views.py
testing_app/purchases/: admin.py  constants.py  models.py
testing_app/purchases/management/commands/: importcsv.py
testing_app/purchases/migrations/: 0001_initial.py  0002_alter_shoppingcart_user.py
testing_app/testing_app/: asgi.py  settings.py  urls.py  wsgi.py
testing_app/tests/: test_authorization.py  test_models.py  test_views.py
uml/: class.puml  uml.puml
