[tool.poetry]
name = "bot-server"
version = "0.1.0"
description = "Серверная часть по запуску и управлению ботов."
authors = ["Olesya Orlenko <olees.orlenko@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.5.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
redis = "^5.0.4"
sqlalchemy = "^2.0.30"
sqlalchemy-json = "^0.7.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pika = "^1.3.2"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = """
/(
  | migrations
)/
"""

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
force_grid_wrap = 0
combine_as_imports = true
remove_redundant_aliases = true

[tool.yamlfix]
line_length = 88
allow_duplicate_keys = true
none_representation = "null"
