[tool.poetry]
name = "bot-server"
version = "0.1.0"
description = "Серверная часть по запуску и управлению ботов."
authors = ["Olesya Orlenko <olees.orlenko@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.5.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
redis = "^5.0.4"
sqlalchemy = "^2.0.30"
sqlalchemy-json = "^0.7.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pika = "^1.3.2"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
sqlalchemy-file = "^0.6.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
