[tool.poetry]
name = "testing-app"
version = "0.1.0"
description = "Тестовое Web-приложение"
authors = ["Olesya Orlenko <olees.orlenko@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
djangorestframework = "^3.15.1"
djoser = "^2.2.2"
drf-yasg = "^1.21.7"
idna = "^3.7"
sqlparse = "^0.5.0"
python-dotenv = "^1.0.1"
django-filter = "^24.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
extend-exclude = """
/(
  | migrations
)/
"""

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
remove_redundant_aliases = true
skip_glob = ["**/migrations/*.py"]
src_paths = ["backend"]
