[tool.poetry]
name = "testing-app"
version = "0.1.0"
description = "Тестовое Web-приложение"
authors = ["Olesya Orlenko <olees.orlenko@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
djangorestframework = "^3.15.1"
djoser = "^2.2.2"
drf-yasg = "^1.21.7"
idna = "^3.7"
sqlparse = "^0.5.0"
python-dotenv = "^1.0.1"
django-filter = "^24.2"
gunicorn = "^22.0.0"
django-cors-headers = "^4.3.1"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
